--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: Project Title
+  title: "Utilize WWBI to implement efficient public policies"
   navbar:
     right:
       - icon: github
